[gd_scene load_steps=7 format=3 uid="uid://bm0jcewh4i6tq"]

[ext_resource type="Script" path="res://Scripts/text.gd" id="1_di4a3"]
[ext_resource type="Theme" uid="uid://bjavysdcsw0k5" path="res://Graphics/UI/default_theme.tres" id="1_g1qku"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqph4"]
bg_color = Color(0.0214346, 0.0214346, 0.0214346, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 2

[sub_resource type="Animation" id="Animation_ekjgr"]
resource_name = "text_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/MarginContainer/HBoxContainer/Label2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_frjek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/MarginContainer/HBoxContainer/Label2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r0llg"]
_data = {
"RESET": SubResource("Animation_frjek"),
"text_animation": SubResource("Animation_ekjgr")
}

[node name="Text" type="CanvasLayer"]
script = ExtResource("1_di4a3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -218.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_g1qku")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yqph4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="StartSymbol" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 60
text = "*"

[node name="Label2" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "Placeholder Text for the game. This is for the cutscene and this is a test to se if it works"
autowrap_mode = 2
clip_text = true

[node name="EndSymbol" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 60
text = "*"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r0llg")
}
